--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -22,7 +22,7 @@
   
     
     <div class="app-bar fixed-top" data-role="appbar">
-    <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Retour</a>
+    <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Menu</a>
     <div class="app-bar-element place-right">
       <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
     </div>
