--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -17,7 +17,7 @@
     </head>
     
     <div class="app-bar fixed-top" data-role="appbar">
-      <a href="<%= authenticated_root_path %>" class="app-bar-element branding">Madera</a>
+      <a href="<%= clients_path %>" class="app-bar-element branding">Retour</a>
     
       <div class="app-bar-element place-right">
         <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
