Jeu de de données
PDF finalisé

Correction des derniers bugs

Vérification du site

--- a/app/views/claddings/_form.html.erb
+++ b/app/views/claddings/_form.html.erb
@@ -35,6 +35,12 @@
     </div>
     
     <div class="form-group">
+        <%= f.label :claddingStock, 'Stock du bardage :' %><br />
+        <%= f.text_field :claddingStock, class: 'form-control' %>
+    </div>
+    
+    
+    <div class="form-group">
         <button class="button loading-pulse lighten primary", type="submit">Valider</button>
     </div>
     
