--- a/app/views/order_quote_clients/_form.html.erb
+++ b/app/views/order_quote_clients/_form.html.erb
@@ -23,7 +23,7 @@
         <span class="mif-cog"></span> <%= current_user.firstname %> <%= current_user.lastname %>
       </div>
     </div>
-    <%= form_for @order do |f| %>
+    <%= form_for @order, :html => {:class => 'align-center'} do |f| %>
         <div class="form-group">
     			<%= f.label :orderName, 'Nom du devis : '%>
     			<%= f.text_field :orderName, class: 'form-control' %></br></br>
@@ -64,9 +64,9 @@
                 <%= render partial: "form_modulus", locals: { q: q, js: false } %>
             <% end %>
         </div>
-        <span class="btn btn-mini add_modulu">Ajouter</span>
+        <span class="button loading-cube add_modulu">Ajouter</span>
 				<div class="form-group">
-            <button class="btn btn-primary", type="submit">Valider</button>
+            <button class="button loading-pulse lighten primary", type="submit">Valider</button>
         </div>
           <script>
             $(function()
