--- a/app/views/modulus/index.html.erb
+++ b/app/views/modulus/index.html.erb
@@ -65,7 +65,7 @@
               <td><%= m.id %></td>
               <td><%= m.modulusName %></td>
               <td><%= m.modulusNature %></td>
-              <td><%= m.insulating.insulatingName %></td>
+              <td><%= m.insulating_id %></td>
               <td><%= m.cladding_id %></td>
               <td><%= m.unite_use_id %></td>
               <td><%= m.priceTotal %></td>
